--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.0",
     "gulp-shell": "^0.2.11",
+    "gulp-uglify": "^1.5.3",
     "jsdoc": "3.3.0-alpha13",
     "jshint-stylish": "^1.0.0"
   },
